--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    margin-top: 100px;
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
@@ -22,9 +23,12 @@ body {
 header {
     background-color: #333;
     padding: 12px 0;
-    display: flex;
+    /*display: flex;*/
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    top: 0%;
+    width: 100%;
 }
 
 .header-container {
