--- a/styles.css
+++ b/styles.css
@@ -298,18 +298,21 @@ footer {
     header {
         flex-direction: column;
         align-items: flex-start;
+        padding: 0%;
+        padding-top:  12px;
     }
 
     nav ul {
-        margin-top: 15px;
+        margin-top: 5px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        margin-bottom: 5px;
     }
 
     nav ul li {
         margin-left: 0;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
     }
 
     .about-container {
